force-app/main/default/objects/LDC_Rate_Class__c/LDC_Rate_Class__c.object-meta.xml
<CustomObject>
    <label>LDC Rate Class</label>
    <nameField>
        <label>LDC Rate Class</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LDC Rate Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>