force-app/main/default/objects/LDC_Rate_Class__c/fields/LDC__c.field-meta.xml
<CustomField>
    <fullName>LDC__c</fullName>
    <label>LDC</label>
    <referenceTo>TDSP__c</referenceTo>
    <relationshipLabel>LDC Rate Classes</relationshipLabel>
    <relationshipName>LDC_Rate_Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>