force-app/main/default/objects/LDC_Rate_Class__c/fields/Name_Key__c.field-meta.xml
<CustomField>
    <fullName>Name_Key__c</fullName>
    <externalId>true</externalId>
    <label>Name Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>