force-app/main/default/objects/LDC_Rate_Class__c/fields/Notice_to_Return_to_LDC_Days__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Return_to_LDC_Days__c</fullName>
    <label>Notice to Return to LDC (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>