force-app/main/default/objects/LDC_Rate_Class__c/fields/Notice_to_Return_to_LDC_Notes__c.field-meta.xml
<CustomField>
    <fullName>Notice_to_Return_to_LDC_Notes__c</fullName>
    <label>Notice to Return to LDC Notes</label>
    <type>TextArea</type>
</CustomField>