force-app/main/default/objects/LDC_Rate_Class__c/fields/Start_Notification_Days__c.field-meta.xml
<CustomField>
    <fullName>Start_Notification_Days__c</fullName>
    <label>Start Notification (Days)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>