force-app/main/default/objects/LDC_Rate_Class__c/fields/Start_Notification_Notes__c.field-meta.xml
<CustomField>
    <fullName>Start_Notification_Notes__c</fullName>
    <label>Start Notification Notes</label>
    <type>TextArea</type>
</CustomField>