force-app/main/default/objects/LDC_Rate_Class__c/fields/Tariff_Minimum_Volume__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Minimum_Volume__c</fullName>
    <label>Tariff Minimum Volume</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>