force-app/main/default/objects/LDC_Rate_Class__c/fields/Tariff_Volume_Notes_optional__c.field-meta.xml
<CustomField>
    <fullName>Tariff_Volume_Notes_optional__c</fullName>
    <label>Tariff Volume Notes (optional)</label>
    <type>TextArea</type>
</CustomField>