force-app/main/default/objects/LDC_Rate_Class__c/fields/Telemetry__c.field-meta.xml
<CustomField>
    <fullName>Telemetry__c</fullName>
    <label>Telemetry?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>