force-app/main/default/objects/LDC_Rate_Class__c/fields/Telemetry_Notes_optional__c.field-meta.xml
<CustomField>
    <fullName>Telemetry_Notes_optional__c</fullName>
    <label>Telemetry Notes (optional)</label>
    <type>TextArea</type>
</CustomField>