force-app/main/default/objects/LDC_Rate_Class__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dth/Day</fullName>
            </value>
            <value>
                <fullName>Dth/Year</fullName>
            </value>
            <value>
                <fullName>Dth/Month</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>