force-app/main/default/objects/LDC_Rate_Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>LDC__c</columns>
    <columns>NAME</columns>
    <columns>Name_Key__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>